<?xml version="1.0" encoding="utf-8"?>
<!--<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    android:fillViewport="true">-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ip"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/red_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="100">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="8dp"
            android:layout_weight="10">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/workodoro"
                android:textAlignment="center"
                android:textSize="48sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="90"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:cardCornerRadius="10dp"
                app:cardElevation="10dp"
                app:cardBackgroundColor="@android:color/transparent">

                <LinearLayout
                    android:id="@+id/timerLayout"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="0dp"
                    android:background="@color/red_accent_background"
                    android:orientation="vertical" >

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="75dp">

                        <Button
                            android:id="@+id/focusButton"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:layout_marginStart="25dp"
                            android:backgroundTint="@color/red_background"
                            android:text="@string/focus"
                            android:textColor="@color/white"
                            android:elevation="50dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <Button
                            android:id="@+id/shortButton"
                            android:layout_width="88dp"
                            android:layout_height="40dp"
                            android:backgroundTint="@color/red_background"
                            android:textColor="@color/white"
                            android:text="@string/_short"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toStartOf="@+id/longButton"
                            app:layout_constraintStart_toEndOf="@+id/focusButton"
                            app:layout_constraintTop_toTopOf="parent" />

                        <Button
                            android:id="@+id/longButton"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp"
                            android:layout_marginEnd="25dp"
                            android:backgroundTint="@color/red_background"
                            android:textColor="@color/white"
                            android:text="@string/_long"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.508" />

                    </androidx.constraintlayout.widget.ConstraintLayout>


                    <TextView
                        android:id="@+id/timerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="25:00"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="96sp" />
                    <TextView
                        android:id="@+id/cycleCount"
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:gravity="center"
                        android:text="@string/cycle"
                        android:textColor="#F6F6F6"
                        android:textSize="20dp"
                        android:textStyle="bold" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="100dp">


                <Button
                    android:id="@+id/resetButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:backgroundTint="@color/white"
                    android:text="@string/reset"
                    android:textColor="@color/red_accent_background"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/relaxButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/white"
                    android:drawableLeft="@drawable/ic_play"
                    android:text="@string/start"
                    android:textColor="@color/red_accent_background"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/skipButton"
                    app:layout_constraintStart_toEndOf="@+id/resetButton"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/skipButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="25dp"
                    android:backgroundTint="@color/white"
                    android:text="@string/skip"
                    android:textColor="@color/red_accent_background"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
    <!--</ScrollView>-->